advertise align centered

--- a/amp.html
+++ b/amp.html
@@ -346,13 +346,15 @@
 
         <!-- right side -->
         <div class="sidebar">
-          <div class="video ratio ratio-16x9 mt-3 my-lg-0 mb-3 mb-xl-4">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/i810CxN5Q6Q?si=QL-iaalOFyZXJDdH"
-              title="YouTube video player" allow="accelerometer; autoplay;">
-            </iframe>
+          <div class="mt-3 mt-lg-0 mb-3 mb-xl-4">
+            <div class="video ratio ratio-16x9">
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/i810CxN5Q6Q?si=QL-iaalOFyZXJDdH"
+                title="YouTube video player" allow="accelerometer; autoplay;">
+              </iframe>
+            </div>
           </div>
           <!-- advertisement -->
-          <div class="advertisement">
+          <div class="advertisement text-center">
             <img src="assets/images/adv1.png" alt="ad-image" class="img-fluid">
           </div>
           <div class="chr mt-4 mb-2"></div>
@@ -482,7 +484,7 @@
           </div>
 
           <!-- advertisement -->
-          <div class="advertisement">
+          <div class="advertisement text-center">
             <img src="assets/images/adv1.png" alt="ad-image" class="img-fluid">
           </div>
           <div class="chr mt-4 mb-2"></div>
@@ -573,7 +575,7 @@
           </div>
 
           <!-- advertisement -->
-          <div class="advertisement">
+          <div class="advertisement text-center">
             <img src="assets/images/adv1.png" alt="ad-image" class="img-fluid">
           </div>
         </div>
