--- a/article.html
+++ b/article.html
@@ -281,7 +281,7 @@
             </iframe>
           </div>
           <!-- advertisement -->
-          <div class="advertisement">
+          <div class="advertisement text-center">
             <img src="assets/images/adv1.png" alt="ad-image" class="img-fluid">
           </div>
           <div class="chr mt-4 mb-2"></div>
@@ -410,7 +410,7 @@
           </div>
 
           <!-- advertisement -->
-          <div class="advertisement">
+          <div class="advertisement text-center">
             <img src="assets/images/adv1.png" alt="ad-image" class="img-fluid">
           </div>
           <div class="chr mt-4 mb-2"></div>
@@ -501,7 +501,7 @@
           </div>
 
           <!-- advertisement -->
-          <div class="advertisement">
+          <div class="advertisement text-center">
             <img src="assets/images/adv1.png" alt="ad-image" class="img-fluid">
           </div>
         </div>
