--- a/index.html
+++ b/index.html
@@ -754,7 +754,7 @@
         <!-- right side -->
         <div class="sidebar">
           <!-- advertisement -->
-          <div class="advertisement">
+          <div class="advertisement text-center">
             <img src="assets/images/adv1.png" alt="ad-image" class="img-fluid">
           </div>
           <div class="chr mt-4 mb-2"></div>
@@ -869,7 +869,7 @@
           </div>
 
           <!-- advertisement -->
-          <div class="advertisement">
+          <div class="advertisement text-center">
             <img src="assets/images/adv1.png" alt="ad-image" class="img-fluid">
           </div>
           <div class="chr mt-4 mb-2"></div>
@@ -975,7 +975,7 @@
           </div>
 
           <!-- advertisement -->
-          <div class="advertisement">
+          <div class="advertisement text-center">
             <img src="assets/images/adv1.png" alt="ad-image" class="img-fluid">
           </div>
           <div class="chr mt-4 mb-2"></div>
@@ -1065,7 +1065,7 @@
             </div>
           </div>
           <!-- advertisement -->
-          <div class="advertisement">
+          <div class="advertisement text-center">
             <img src="assets/images/adv1.png" alt="ad-image" class="img-fluid">
           </div>
         </div>
