navbar edited for mobile image fixed so

--- a/article.html
+++ b/article.html
@@ -46,7 +46,7 @@
         </div>
       </div>
     </div>
-    <div class="bottom-navigation shadow-sm">
+    <div class="bottom-navigation">
       <div class="container">
         <nav class="d-flex link-wrapper align-items-center justify-content-lg-center">
           <a href="#" class="nav-link ms-0 active">HOME</a>
@@ -89,7 +89,7 @@
 
     <!-- === sideNav start === -->
     <div class="offcanvas offcanvas-end side-nav" tabindex="-1" id="sideNav">
-      <div class="offcanvas-header p-4">
+      <div class="offcanvas-header p-4 pb-2">
         <a class="navbar-brand" href="index.html">
           <img src="assets/images/logo.svg" alt="logo" class="img-fluid" />
         </a>
@@ -97,21 +97,15 @@
       </div>
       <div class="offcanvas-body p-4 pt-0">
         <nav class="main-nav">
-          <p style="font-size: 12px;">SEP 19, 2023 LAST UPDATED 11:56 AM EDT</p>
-          <hr class="my-xl-3">
+          <hr>
           <ul class="ps-0">
-            <li>
-              <a href="#" class="nav-link">SLIDESHOWS</a>
-            </li>
-            <li>
-              <a href="#" class="nav-link">ARCHIVES</a>
-            </li>
-            <li>
-              <a href="#" class="nav-link">VIDEO</a>
-            </li>
-            <li>
-              <a href="#" class="nav-link">SUBSCRIBE NOW</a>
-            </li>
+            <li><a href="#" class="nav-link">Home</a></li>
+            <li><a href="#" class="nav-link">News</a></li>
+            <li><a href="#" class="nav-link">World</a></li>
+            <li><a href="#" class="nav-link">Markets</a></li>
+            <li><a href="#" class="nav-link">Tech</a></li>
+            <li><a href="#" class="nav-link">Personal Finance</a></li>
+            <li><a href="#" class="nav-link">Life</a></li>
           </ul>
         </nav>
       </div>
@@ -162,7 +156,7 @@
                 money supply is presented in cents or other small coins.
               </p>
 
-              <h3 class="heading-medium">Advantages of Micro Accounts</h3>
+              <h3 class="heading-22">Advantages of Micro Accounts</h3>
 
               <p class="text-big my-3 my-xl-4">
                 If you think that the
@@ -220,7 +214,7 @@
                 money supply is presented in cents or other small coins.
               </p>
 
-              <h3 class="heading-medium">Advantages of Micro Accounts</h3>
+              <h3 class="heading-22">Advantages of Micro Accounts</h3>
 
               <p class="text-big my-3 my-xl-4">
                 If you think that the
@@ -269,7 +263,7 @@
             <button class="action-btn mb-2">Print</button>
             <button class="action-btn mb-2">Email</button>
           </div>
-          <p class="text-medium-ash">Copyright © MoneyTimes.com</p>
+          <p class="text-medium-ash" style="font-size: 13px;">Copyright © MoneyTimes.com</p>
           <!-- left side ended -->
         </div>
 
@@ -295,7 +289,7 @@
               <div class="row gy-3">
                 <div class="col-4 pe-0 position-relative">
                   <div class="position-relative">
-                    <img src="assets/images/mp1.png" alt="image" class="img-fluid">
+                    <img src="assets/images/mp1.png" alt="image" class="img-fluid w-100">
                     <span class="absolute-number">1</span>
                   </div>
                 </div>
@@ -314,7 +308,7 @@
               <div class="row gy-3">
                 <div class="col-4 pe-0 position-relative">
                   <div class="position-relative">
-                    <img src="assets/images/mp2.png" alt="image" class="img-fluid">
+                    <img src="assets/images/mp2.png" alt="image" class="img-fluid w-100">
                     <span class="absolute-number">2</span>
                   </div>
                 </div>
@@ -333,7 +327,7 @@
               <div class="row gy-3">
                 <div class="col-4 pe-0 position-relative">
                   <div class="position-relative">
-                    <img src="assets/images/mp3.png" alt="image" class="img-fluid">
+                    <img src="assets/images/mp3.png" alt="image" class="img-fluid w-100">
                     <span class="absolute-number">3</span>
                   </div>
                 </div>
@@ -352,7 +346,7 @@
               <div class="row gy-3">
                 <div class="col-4 pe-0 position-relative">
                   <div class="position-relative">
-                    <img src="assets/images/mp4.png" alt="image" class="img-fluid">
+                    <img src="assets/images/mp4.png" alt="image" class="img-fluid w-100">
                     <span class="absolute-number">4</span>
                   </div>
                 </div>
@@ -371,7 +365,7 @@
               <div class="row gy-3">
                 <div class="col-4 pe-0 position-relative">
                   <div class="position-relative">
-                    <img src="assets/images/mp5.png" alt="image" class="img-fluid">
+                    <img src="assets/images/mp5.png" alt="image" class="img-fluid w-100">
                     <span class="absolute-number">5</span>
                   </div>
                 </div>
@@ -387,7 +381,7 @@
           </div>
           <div class="chr mb-2"></div>
           <!-- newsletter -->
-          <div class="newsletters pb-3 pb-xl-4">
+          <div class="newsletters pb-3 pb-md-4">
             <p class="section-title">Newsletters</p>
             <hr>
 
@@ -423,7 +417,7 @@
             <div class="news-link">
               <div class="row gy-3">
                 <div class="col-4 pe-0">
-                  <img src="assets/images/mr1.png" alt="image" class="img-fluid">
+                  <img src="assets/images/mr1.png" alt="image" class="img-fluid w-100">
                 </div>
                 <div class="col-8">
                   <a href="#">
@@ -439,7 +433,7 @@
             <div class="news-link">
               <div class="row gy-3">
                 <div class="col-4 pe-0">
-                  <img src="assets/images/mr2.png" alt="image" class="img-fluid">
+                  <img src="assets/images/mr2.png" alt="image" class="img-fluid w-100">
                 </div>
                 <div class="col-8">
                   <a href="#">
@@ -455,7 +449,7 @@
             <div class="news-link">
               <div class="row gy-3">
                 <div class="col-4 pe-0">
-                  <img src="assets/images/mr3.png" alt="image" class="img-fluid">
+                  <img src="assets/images/mr3.png" alt="image" class="img-fluid w-100">
                 </div>
                 <div class="col-8">
                   <a href="#">
@@ -471,7 +465,7 @@
             <div class="news-link">
               <div class="row gy-3">
                 <div class="col-4 pe-0">
-                  <img src="assets/images/mr4.png" alt="image" class="img-fluid">
+                  <img src="assets/images/mr4.png" alt="image" class="img-fluid w-100">
                 </div>
                 <div class="col-8">
                   <a href="#">
@@ -487,7 +481,7 @@
             <div class="news-link">
               <div class="row gy-3">
                 <div class="col-4 pe-0">
-                  <img src="assets/images/mr5.png" alt="image" class="img-fluid">
+                  <img src="assets/images/mr5.png" alt="image" class="img-fluid w-100">
                 </div>
                 <div class="col-8">
                   <a href="#">
