--- a/section.html
+++ b/section.html
@@ -46,7 +46,7 @@
         </div>
       </div>
     </div>
-    <div class="bottom-navigation shadow-sm">
+    <div class="bottom-navigation">
       <div class="container">
         <nav class="d-flex link-wrapper align-items-center justify-content-lg-center">
           <a href="#" class="nav-link ms-0 active">HOME</a>
@@ -89,7 +89,7 @@
 
     <!-- === sideNav start === -->
     <div class="offcanvas offcanvas-end side-nav" tabindex="-1" id="sideNav">
-      <div class="offcanvas-header p-4">
+      <div class="offcanvas-header p-4 pb-2">
         <a class="navbar-brand" href="index.html">
           <img src="assets/images/logo.svg" alt="logo" class="img-fluid" />
         </a>
@@ -97,21 +97,15 @@
       </div>
       <div class="offcanvas-body p-4 pt-0">
         <nav class="main-nav">
-          <p style="font-size: 12px;">SEP 19, 2023 LAST UPDATED 11:56 AM EDT</p>
           <hr>
           <ul class="ps-0">
-            <li>
-              <a href="#" class="nav-link">SLIDESHOWS</a>
-            </li>
-            <li>
-              <a href="#" class="nav-link">ARCHIVES</a>
-            </li>
-            <li>
-              <a href="#" class="nav-link">VIDEO</a>
-            </li>
-            <li>
-              <a href="#" class="nav-link">SUBSCRIBE NOW</a>
-            </li>
+            <li><a href="#" class="nav-link">Home</a></li>
+            <li><a href="#" class="nav-link">News</a></li>
+            <li><a href="#" class="nav-link">World</a></li>
+            <li><a href="#" class="nav-link">Markets</a></li>
+            <li><a href="#" class="nav-link">Tech</a></li>
+            <li><a href="#" class="nav-link">Personal Finance</a></li>
+            <li><a href="#" class="nav-link">Life</a></li>
           </ul>
         </nav>
       </div>
@@ -156,7 +150,7 @@
           <hr class="my-4">
           <!-- crypto -->
           <div class="row gy-4">
-            <div class="col-md-6 col-xl-4 bor-right">
+            <div class="col-md-4 bor-right">
               <div class="news-link">
                 <img src="assets/images/cr1.png " alt="image" class="img-fluid mb-2">
                 <span class="category-title pb-3">Personal Finance</span>
@@ -170,7 +164,7 @@
                 </p>
               </div>
             </div>
-            <div class="col-md-6 col-xl-4 bor-right">
+            <div class="col-md-4 bor-right">
               <div class="news-link">
                 <img src="assets/images/cr2.png " alt="image" class="img-fluid mb-2">
                 <span class="category-title pb-3">Personal Finance</span>
@@ -184,7 +178,7 @@
                 </p>
               </div>
             </div>
-            <div class="col-md-6 col-xl-4">
+            <div class="col-md-4">
               <div class="news-link">
                 <img src="assets/images/cr3.png " alt="image" class="img-fluid mb-2">
                 <span class="category-title pb-3">Personal Finance</span>
@@ -199,9 +193,10 @@
               </div>
             </div>
           </div>
-          <hr class="my-5">
+          <hr class="my-4 my-lg-5">
+
           <!-- addvertisement -->
-          <div class="py-3">
+          <div class="py-3 text-center">
             <img src="assets/images/ad.png" alt="image" class="img-fluid">
           </div>
           <div class="chr mt-4 mt-xl-5 mb-2"></div>
@@ -493,7 +488,7 @@
         <!-- right side -->
         <div class="sidebar">
           <!-- advertisement -->
-          <div class="advertisement pt-3 pt-lg-0">
+          <div class="advertisement text-center pt-3 pt-lg-0">
             <img src="assets/images/adv1.png" alt="ad-image" class="img-fluid">
           </div>
           <div class="chr mt-4 mb-2"></div>
@@ -507,7 +502,7 @@
               <div class="row gy-3">
                 <div class="col-4 pe-0 position-relative">
                   <div class="position-relative">
-                    <img src="assets/images/mp1.png" alt="image" class="img-fluid">
+                    <img src="assets/images/mp1.png" alt="image" class="img-fluid w-100">
                     <span class="absolute-number">1</span>
                   </div>
                 </div>
@@ -526,7 +521,7 @@
               <div class="row gy-3">
                 <div class="col-4 pe-0 position-relative">
                   <div class="position-relative">
-                    <img src="assets/images/mp2.png" alt="image" class="img-fluid">
+                    <img src="assets/images/mp2.png" alt="image" class="img-fluid w-100">
                     <span class="absolute-number">2</span>
                   </div>
                 </div>
@@ -545,7 +540,7 @@
               <div class="row gy-3">
                 <div class="col-4 pe-0 position-relative">
                   <div class="position-relative">
-                    <img src="assets/images/mp3.png" alt="image" class="img-fluid">
+                    <img src="assets/images/mp3.png" alt="image" class="img-fluid w-100">
                     <span class="absolute-number">3</span>
                   </div>
                 </div>
@@ -564,7 +559,7 @@
               <div class="row gy-3">
                 <div class="col-4 pe-0 position-relative">
                   <div class="position-relative">
-                    <img src="assets/images/mp4.png" alt="image" class="img-fluid">
+                    <img src="assets/images/mp4.png" alt="image" class="img-fluid w-100">
                     <span class="absolute-number">4</span>
                   </div>
                 </div>
@@ -583,7 +578,7 @@
               <div class="row gy-3">
                 <div class="col-4 pe-0 position-relative">
                   <div class="position-relative">
-                    <img src="assets/images/mp5.png" alt="image" class="img-fluid">
+                    <img src="assets/images/mp5.png" alt="image" class="img-fluid w-100">
                     <span class="absolute-number">5</span>
                   </div>
                 </div>
@@ -622,7 +617,7 @@
           </div>
 
           <!-- advertisement -->
-          <div class="advertisement">
+          <div class="advertisement text-center">
             <img src="assets/images/adv1.png" alt="ad-image" class="img-fluid">
           </div>
           <div class="chr mt-4 mb-2"></div>
@@ -635,7 +630,7 @@
             <div class="news-link">
               <div class="row gy-3">
                 <div class="col-4 pe-0">
-                  <img src="assets/images/mr1.png" alt="image" class="img-fluid">
+                  <img src="assets/images/mr1.png" alt="image" class="img-fluid w-100">
                 </div>
                 <div class="col-8">
                   <a href="#">
@@ -651,7 +646,7 @@
             <div class="news-link">
               <div class="row gy-3">
                 <div class="col-4 pe-0">
-                  <img src="assets/images/mr2.png" alt="image" class="img-fluid">
+                  <img src="assets/images/mr2.png" alt="image" class="img-fluid w-100">
                 </div>
                 <div class="col-8">
                   <a href="#">
@@ -667,7 +662,7 @@
             <div class="news-link">
               <div class="row gy-3">
                 <div class="col-4 pe-0">
-                  <img src="assets/images/mr3.png" alt="image" class="img-fluid">
+                  <img src="assets/images/mr3.png" alt="image" class="img-fluid w-100">
                 </div>
                 <div class="col-8">
                   <a href="#">
@@ -683,7 +678,7 @@
             <div class="news-link">
               <div class="row gy-3">
                 <div class="col-4 pe-0">
-                  <img src="assets/images/mr4.png" alt="image" class="img-fluid">
+                  <img src="assets/images/mr4.png" alt="image" class="img-fluid w-100">
                 </div>
                 <div class="col-8">
                   <a href="#">
@@ -699,7 +694,7 @@
             <div class="news-link">
               <div class="row gy-3">
                 <div class="col-4 pe-0">
-                  <img src="assets/images/mr5.png" alt="image" class="img-fluid">
+                  <img src="assets/images/mr5.png" alt="image" class="img-fluid w-100">
                 </div>
                 <div class="col-8">
                   <a href="#">
@@ -712,7 +707,7 @@
             </div>
           </div>
           <!-- advertisement -->
-          <div class="advertisement">
+          <div class="advertisement text-center">
             <img src="assets/images/adv1.png" alt="ad-image" class="img-fluid">
           </div>
         </div>
