--- a/amp.html
+++ b/amp.html
@@ -117,7 +117,7 @@
         </div>
       </div>
     </div>
-    <div class="bottom-navigation shadow-sm">
+    <div class="bottom-navigation">
       <div class="container">
         <nav class="d-flex link-wrapper align-items-center justify-content-lg-center">
           <a href="#" class="nav-link ms-0 active">HOME</a>
@@ -160,7 +160,7 @@
 
     <!-- === sideNav start === -->
     <div class="offcanvas offcanvas-end side-nav" tabindex="-1" id="sideNav">
-      <div class="offcanvas-header p-4">
+      <div class="offcanvas-header p-4 pb-2">
         <a class="navbar-brand" href="index.html">
           <img src="assets/images/logo.svg" alt="logo" class="img-fluid" />
         </a>
@@ -168,21 +168,15 @@
       </div>
       <div class="offcanvas-body p-4 pt-0">
         <nav class="main-nav">
-          <p style="font-size: 12px;">SEP 19, 2023 LAST UPDATED 11:56 AM EDT</p>
           <hr>
           <ul class="ps-0">
-            <li>
-              <a href="#" class="nav-link">SLIDESHOWS</a>
-            </li>
-            <li>
-              <a href="#" class="nav-link">ARCHIVES</a>
-            </li>
-            <li>
-              <a href="#" class="nav-link">VIDEO</a>
-            </li>
-            <li>
-              <a href="#" class="nav-link">SUBSCRIBE NOW</a>
-            </li>
+            <li><a href="#" class="nav-link">Home</a></li>
+            <li><a href="#" class="nav-link">News</a></li>
+            <li><a href="#" class="nav-link">World</a></li>
+            <li><a href="#" class="nav-link">Markets</a></li>
+            <li><a href="#" class="nav-link">Tech</a></li>
+            <li><a href="#" class="nav-link">Personal Finance</a></li>
+            <li><a href="#" class="nav-link">Life</a></li>
           </ul>
         </nav>
       </div>
@@ -233,7 +227,7 @@
                 money supply is presented in cents or other small coins.
               </p>
 
-              <h3 class="heading-medium">Advantages of Micro Accounts</h3>
+              <h3 class="heading-22">Advantages of Micro Accounts</h3>
 
               <p class="text-big my-3 my-xl-4">
                 If you think that the
@@ -291,7 +285,7 @@
                 money supply is presented in cents or other small coins.
               </p>
 
-              <h3 class="heading-medium">Advantages of Micro Accounts</h3>
+              <h3 class="heading-22">Advantages of Micro Accounts</h3>
 
               <p class="text-big my-3 my-xl-4">
                 If you think that the
@@ -340,18 +334,16 @@
             <button class="action-btn mb-2">Print</button>
             <button class="action-btn mb-2">Email</button>
           </div>
-          <p class="text-medium-ash">Copyright © MoneyTimes.com</p>
+          <p class="text-medium-ash" style="font-size: 13px;">Copyright © MoneyTimes.com</p>
           <!-- left side ended -->
         </div>
 
         <!-- right side -->
         <div class="sidebar">
-          <div class="mt-3 mt-lg-0 mb-3 mb-xl-4">
-            <div class="video ratio ratio-16x9">
-              <iframe width="560" height="315" src="https://www.youtube.com/embed/i810CxN5Q6Q?si=QL-iaalOFyZXJDdH"
-                title="YouTube video player" allow="accelerometer; autoplay;">
-              </iframe>
-            </div>
+          <div class="video ratio ratio-16x9 mt-3 mt-lg-0 mb-3 mb-xl-4">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/i810CxN5Q6Q?si=QL-iaalOFyZXJDdH"
+              title="YouTube video player" allow="accelerometer; autoplay;">
+            </iframe>
           </div>
           <!-- advertisement -->
           <div class="advertisement text-center">
@@ -368,7 +360,7 @@
               <div class="row gy-3">
                 <div class="col-4 pe-0 position-relative">
                   <div class="position-relative">
-                    <img src="assets/images/mp1.png" alt="image" class="img-fluid">
+                    <img src="assets/images/mp1.png" alt="image" class="img-fluid w-100">
                     <span class="absolute-number">1</span>
                   </div>
                 </div>
@@ -387,13 +379,13 @@
               <div class="row gy-3">
                 <div class="col-4 pe-0 position-relative">
                   <div class="position-relative">
-                    <img src="assets/images/mp2.png" alt="image" class="img-fluid">
+                    <img src="assets/images/mp2.png" alt="image" class="img-fluid w-100">
                     <span class="absolute-number">2</span>
                   </div>
                 </div>
                 <div class="col-8">
                   <a href="#">
-                    <h4 class="heading-small line-clamp-3">
+                    <h4 class="heading-small line-clamp-3 line-clamp-3">
                       10 little Things that will Make a Big Difference in Your FX Trading
                     </h4>
                   </a>
@@ -406,7 +398,7 @@
               <div class="row gy-3">
                 <div class="col-4 pe-0 position-relative">
                   <div class="position-relative">
-                    <img src="assets/images/mp3.png" alt="image" class="img-fluid">
+                    <img src="assets/images/mp3.png" alt="image" class="img-fluid w-100">
                     <span class="absolute-number">3</span>
                   </div>
                 </div>
@@ -425,7 +417,7 @@
               <div class="row gy-3">
                 <div class="col-4 pe-0 position-relative">
                   <div class="position-relative">
-                    <img src="assets/images/mp4.png" alt="image" class="img-fluid">
+                    <img src="assets/images/mp4.png" alt="image" class="img-fluid w-100">
                     <span class="absolute-number">4</span>
                   </div>
                 </div>
@@ -444,7 +436,7 @@
               <div class="row gy-3">
                 <div class="col-4 pe-0 position-relative">
                   <div class="position-relative">
-                    <img src="assets/images/mp5.png" alt="image" class="img-fluid">
+                    <img src="assets/images/mp5.png" alt="image" class="img-fluid w-100">
                     <span class="absolute-number">5</span>
                   </div>
                 </div>
@@ -459,9 +451,8 @@
             </div>
           </div>
           <div class="chr mb-2"></div>
-
           <!-- newsletter -->
-          <div class="newsletters pb-3 pb-xl-4">
+          <div class="newsletters pb-3 pb-md-4">
             <p class="section-title">Newsletters</p>
             <hr>
 
@@ -492,12 +483,12 @@
           <!-- Related Articles-->
           <div class="Related-Articles pb-3 pb-xl-5">
             <p class="section-title">Related Articles</p>
-            <hr class="my-xl-3">
+            <hr>
             <!--  -->
             <div class="news-link">
               <div class="row gy-3">
                 <div class="col-4 pe-0">
-                  <img src="assets/images/mr1.png" alt="image" class="img-fluid">
+                  <img src="assets/images/mr1.png" alt="image" class="img-fluid w-100">
                 </div>
                 <div class="col-8">
                   <a href="#">
@@ -513,7 +504,7 @@
             <div class="news-link">
               <div class="row gy-3">
                 <div class="col-4 pe-0">
-                  <img src="assets/images/mr2.png" alt="image" class="img-fluid">
+                  <img src="assets/images/mr2.png" alt="image" class="img-fluid w-100">
                 </div>
                 <div class="col-8">
                   <a href="#">
@@ -529,7 +520,7 @@
             <div class="news-link">
               <div class="row gy-3">
                 <div class="col-4 pe-0">
-                  <img src="assets/images/mr3.png" alt="image" class="img-fluid">
+                  <img src="assets/images/mr3.png" alt="image" class="img-fluid w-100">
                 </div>
                 <div class="col-8">
                   <a href="#">
@@ -545,7 +536,7 @@
             <div class="news-link">
               <div class="row gy-3">
                 <div class="col-4 pe-0">
-                  <img src="assets/images/mr4.png" alt="image" class="img-fluid">
+                  <img src="assets/images/mr4.png" alt="image" class="img-fluid w-100">
                 </div>
                 <div class="col-8">
                   <a href="#">
@@ -561,7 +552,7 @@
             <div class="news-link">
               <div class="row gy-3">
                 <div class="col-4 pe-0">
-                  <img src="assets/images/mr5.png" alt="image" class="img-fluid">
+                  <img src="assets/images/mr5.png" alt="image" class="img-fluid w-100">
                 </div>
                 <div class="col-8">
                   <a href="#">
