navbar edited for mobile image fixed so

--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@
                       </div>
                     </div>
                     <div class="col-6 bor-right-a">
-                      <div class="news-link">
+                      <div class="news-link auto">
                         <img src="assets/images/w3.png" alt="image" class="img-fluid">
                         <a href="#">
                           <h4 class="heading-medium pt-2">
@@ -502,8 +502,7 @@
                       </div>
                     </div>
                     <div class="col-6">
-
-                      <div class="news-link">
+                      <div class="news-link auto">
                         <img src="assets/images/w4.png" alt="image" class="img-fluid">
                         <a href="#">
                           <h4 class="heading-medium pt-2">
@@ -657,7 +656,7 @@
                       </div>
                     </div>
                     <div class="col-6 h-100 bor-right-a">
-                      <div class="news-link">
+                      <div class="news-link auto">
                         <img src="assets/images/pf4.png" alt="image" class="img-fluid">
                         <a href="#">
                           <h4 class="heading-medium-v2 pt-2">
@@ -667,7 +666,7 @@
                       </div>
                     </div>
                     <div class="col-6 h-100">
-                      <div class="news-link">
+                      <div class="news-link auto">
                         <img src="assets/images/pf5.png" alt="image" class="img-fluid">
                         <a href="#">
                           <h4 class="heading-medium-v2 pt-2">
@@ -727,7 +726,7 @@
                       </div>
                     </div>
                     <div class="col-6 h-100 bor-right-a">
-                      <div class="news-link">
+                      <div class="news-link auto">
                         <img src="assets/images/li4.png" alt="image" class="img-fluid">
                         <a href="#">
                           <h4 class="heading-medium-v2 pt-2">
@@ -737,7 +736,7 @@
                       </div>
                     </div>
                     <div class="col-6 h-100">
-                      <div class="news-link">
+                      <div class="news-link auto">
                         <img src="assets/images/li5.png" alt="image" class="img-fluid">
                         <a href="#">
                           <h4 class="heading-medium-v2 pt-2">
